; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_prs.c_mvpp2_prs_sram_bits_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_prs.c_mvpp2_prs_sram_bits_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvpp2_prs_entry = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mvpp2_prs_entry*, i32, i32)* @mvpp2_prs_sram_bits_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mvpp2_prs_sram_bits_set(%struct.mvpp2_prs_entry* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mvpp2_prs_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mvpp2_prs_entry* %0, %struct.mvpp2_prs_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @MVPP2_BIT_IN_WORD(i32 %8)
  %10 = shl i32 %7, %9
  %11 = load %struct.mvpp2_prs_entry*, %struct.mvpp2_prs_entry** %4, align 8
  %12 = getelementptr inbounds %struct.mvpp2_prs_entry, %struct.mvpp2_prs_entry* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i64 @MVPP2_BIT_TO_WORD(i32 %14)
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %10
  store i32 %18, i32* %16, align 4
  ret void
}

declare dso_local i32 @MVPP2_BIT_IN_WORD(i32) #1

declare dso_local i64 @MVPP2_BIT_TO_WORD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
